--- a/index.html
+++ b/index.html
@@ -10,36 +10,86 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <style>
         :root {
-            --primary: #3a86ff;
-            --primary-hover: #2a75ee;
-            --secondary: #8338ec;
-            --dark: #1e293b;
-            --light: #f8fafc;
-            --focus: #4CAF50;
-            --focus-hover: #3d9c40;
-            --distraction: #F44336;
-            --distraction-hover: #e53935;
-            --neutral: #64748b;
-            --card-bg: #ffffff;
-            --border: rgba(0, 0, 0, 0.05);
-            --success: #00c853;
-            --warning: #ffd600;
-            --info: #2196F3;
+            --background: hsl(0 0% 100%);
+            --foreground: hsl(0 0% 3.9%);
+            --card: hsl(0 0% 100%);
+            --card-foreground: hsl(0 0% 3.9%);
+            --popover: hsl(0 0% 100%);
+            --popover-foreground: hsl(0 0% 3.9%);
+            --primary: hsl(0 0% 9%);
+            --primary-foreground: hsl(0 0% 98%);
+            --primary-hover: hsl(0 0% 20%);
+            --secondary: hsl(0 0% 96.1%);
+            --secondary-foreground: hsl(0 0% 9%);
+            --muted: hsl(0 0% 96.1%);
+            --muted-foreground: hsl(0 0% 45.1%);
+            --accent: hsl(0 0% 96.1%);
+            --accent-foreground: hsl(0 0% 9%);
+            --destructive: hsl(0 84.2% 60.2%);
+            --destructive-foreground: hsl(0 0% 98%);
+            --border: hsl(0 0% 89.8%);
+            --input: hsl(0 0% 89.8%);
+            --ring: hsl(0 0% 3.9%);
+            --radius: 0.5rem;
+        }
+
+        .dark-mode {
+            --background: hsl(0 0% 3.9%);
+            --foreground: hsl(0 0% 98%);
+            --card: hsl(0 0% 3.9%);
+            --card-foreground: hsl(0 0% 98%);
+            --popover: hsl(0 0% 3.9%);
+            --popover-foreground: hsl(0 0% 98%);
+            --primary: hsl(0 0% 98%);
+            --primary-foreground: hsl(0 0% 9%);
+            --primary-hover: hsl(0 0% 85%);
+            --secondary: hsl(0 0% 14.9%);
+            --secondary-foreground: hsl(0 0% 98%);
+            --muted: hsl(0 0% 14.9%);
+            --muted-foreground: hsl(0 0% 63.9%);
+            --accent: hsl(0 0% 14.9%);
+            --accent-foreground: hsl(0 0% 98%);
+            --destructive: hsl(0 62.8% 30.6%);
+            --destructive-foreground: hsl(0 0% 98%);
+            --border: hsl(0 0% 14.9%);
+            --input: hsl(0 0% 14.9%);
+            --ring: hsl(0 0% 83.1%);
         }
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background-color: var(--light);
-            color: var(--dark);
+            background-color: var(--background);
+            color: var(--foreground);
             transition: background-color 0.3s, color 0.3s;
-            padding: 1rem;
         }
 
-        body.dark-mode {
-            --card-bg: #242f3f;
-            --border: rgba(255, 255, 255, 0.1);
-            background-color: var(--dark);
-            color: var(--light);
+        .sidebar {
+            background-color: var(--secondary);
+            width: 240px;
+            padding: 1.5rem;
+            border-right: 1px solid var(--border);
+        }
+
+        .sidebar .nav-link {
+            color: var(--muted-foreground);
+            font-weight: 500;
+            padding: 0.75rem 1rem;
+            border-radius: var(--radius);
+            transition: background-color 0.2s, color 0.2s;
+        }
+
+        .sidebar .nav-link:hover {
+            color: var(--foreground);
+            background-color: var(--accent);
+        }
+        
+        .sidebar .nav-link.active {
+            color: var(--primary-foreground);
+            background-color: var(--primary);
+        }
+
+        .sidebar .nav-link.active:hover {
+             background-color: var(--primary-hover);
         }
 
         .app-container {
@@ -68,7 +118,7 @@
         }
 
         .card {
-            background-color: var(--card-bg);
+            background-color: var(--card);
             border-radius: 12px;
             border: 1px solid var(--border);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
@@ -847,47 +897,50 @@
     </style>
 </head>
 
-<body>
+<body class="dark-mode">
     <div class="d-flex vh-100">
-        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 200px;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <i class="fas fa-clock me-2"></i>
+        <div class="sidebar d-flex flex-column flex-shrink-0">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none" style="color: var(--foreground);">
+                <i class="fas fa-clock me-2 fs-4"></i>
                 <span class="fs-4">TimeTracker</span>
             </a>
-            <hr>
+            <hr style="border-color: var(--border);">
             <ul class="nav nav-pills flex-column mb-auto">
-                <li class="nav-item">
+                <li class="nav-item mb-1">
                     <a href="#" class="nav-link active" id="nav-timeline" aria-current="page">
                         <i class="fas fa-chart-line me-2"></i>
                         Timeline
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="nav-link text-white" id="nav-settings">
+                <li class="mb-1">
+                    <a href="#" class="nav-link" id="nav-settings">
                         <i class="fas fa-cog me-2"></i>
                         Settings
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="nav-link text-white" id="nav-about">
+                <li class="mb-1">
+                    <a href="#" class="nav-link" id="nav-about">
                         <i class="fas fa-info-circle me-2"></i>
                         About
                     </a>
                 </li>
             </ul>
         </div>
-        <div class="flex-grow-1 p-3" style="overflow-y: auto; --bs-body-bg: var(--light); background-color: var(--bs-body-bg) !important; color: var(--dark)">
+        <div class="flex-grow-1 p-4" style="overflow-y: auto; background-color: var(--background); color: var(--foreground)">
             <div id="timeline-view">
-                <div class="d-flex justify-content-between align-items-center mb-3">
+                <div class="d-flex justify-content-between align-items-center mb-4">
                     <h1 class="h3">Timeline</h1>
-                    <div class="btn-group" role="group">
-                        <button id="prevDay" class="btn btn-outline-secondary" aria-label="Previous Day"><i class="fas fa-chevron-left"></i></button>
-                        <button id="todayBtn" class="btn btn-outline-secondary">Today</button>
-                        <button id="nextDay" class="btn btn-outline-secondary" aria-label="Next Day"><i class="fas fa-chevron-right"></i></button>
+                    <div class="d-flex align-items-center">
+                        <div class="btn-group me-2" role="group">
+                            <button id="prevDay" class="btn btn-outline-secondary" aria-label="Previous Day"><i class="fas fa-chevron-left"></i></button>
+                            <button id="todayBtn" class="btn btn-outline-secondary">Today</button>
+                            <button id="nextDay" class="btn btn-outline-secondary" aria-label="Next Day"><i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <h2 id="currentDateLabel" class="h5 mb-0 me-3"></h2>
+                        <button id="toggleTracking" class="btn btn-primary">Start Tracking</button>
                     </div>
-                    <h2 id="currentDateLabel" class="h5 mb-0"></h2>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
                     <div class="card-body">
                         <div id="timeline" class="timeline-container"></div>
                     </div>
@@ -896,7 +949,7 @@
 
             <div id="settings-view" class="d-none">
                 <h1 class="h3">Settings</h1>
-                <div class="card">
+                <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
                     <div class="card-body">
                         <p>Settings will go here.</p>
                         <!-- Full settings UI will be complex to just add here without more context from original file -->
@@ -906,7 +959,7 @@
 
             <div id="about-view" class="d-none">
                 <h1 class="h3">About</h1>
-                <div class="card">
+                <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
                     <div class="card-body">
                         <p>TimeTracker Pro - a simple app to track your time.</p>
                         <p>Version: 1.0.0</p>
