--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>TimeTracker Pro</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
@@ -32,6 +35,7 @@
             --ring: hsl(0 0% 3.9%);
             --radius: 0.5rem;
             --success: hsl(142 76% 36%);
+            --success-foreground: hsl(0 0% 98%);
             --warning: hsl(38 92% 50%);
             --info: hsl(199 89% 48%);
         }
@@ -57,13 +61,149 @@
             --border: hsl(0 0% 14.9%);
             --input: hsl(0 0% 14.9%);
             --ring: hsl(0 0% 83.1%);
+            --success: hsl(142 76% 36%);
+            --success-foreground: hsl(0 0% 98%);
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background-color: var(--background);
             color: var(--foreground);
             transition: background-color 0.3s, color 0.3s;
+        }
+
+        /* Settings Page Styles */
+        .settings-section {
+            margin-bottom: 2rem;
+        }
+
+        .settings-section h3 {
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+            color: var(--foreground);
+            border-bottom: 1px solid var(--border);
+            padding-bottom: 0.5rem;
+        }
+
+        .form-label {
+            font-weight: 500;
+            color: var(--foreground);
+            margin-bottom: 0.5rem;
+        }
+
+        .form-control, .form-select {
+            background-color: var(--card);
+            border: 1px solid var(--border);
+            color: var(--foreground);
+            border-radius: var(--radius);
+            padding: 0.5rem 0.75rem;
+            font-size: 0.875rem;
+            transition: border-color 0.2s, box-shadow 0.2s;
+        }
+
+        .form-control:focus, .form-select:focus {
+            border-color: var(--ring);
+            box-shadow: 0 0 0 2px var(--ring);
+            outline: none;
+        }
+
+        .form-control::placeholder {
+            color: var(--muted-foreground);
+        }
+
+        .form-check-input {
+            background-color: var(--card);
+            border: 1px solid var(--border);
+            border-radius: 0.25rem;
+        }
+
+        .form-check-input:checked {
+            background-color: var(--primary);
+            border-color: var(--primary);
+        }
+
+        .form-check-input:focus {
+            border-color: var(--ring);
+            box-shadow: 0 0 0 2px var(--ring);
+        }
+
+        .btn {
+            font-weight: 500;
+            border-radius: var(--radius);
+            padding: 0.5rem 1rem;
+            font-size: 0.875rem;
+            transition: all 0.2s;
+        }
+
+        .btn-primary {
+            background-color: var(--primary);
+            border-color: var(--primary);
+            color: var(--primary-foreground);
+        }
+
+        .btn-primary:hover {
+            background-color: var(--primary-hover);
+            border-color: var(--primary-hover);
+        }
+
+        .btn-outline-secondary {
+            color: var(--muted-foreground);
+            border-color: var(--border);
+            background-color: transparent;
+        }
+
+        .btn-outline-secondary:hover {
+            background-color: var(--accent);
+            color: var(--accent-foreground);
+        }
+
+        .btn-outline-danger {
+            color: var(--destructive);
+            border-color: var(--destructive);
+            background-color: transparent;
+        }
+
+        .btn-outline-danger:hover {
+            background-color: var(--destructive);
+            color: var(--destructive-foreground);
+        }
+
+        .badge {
+            font-weight: 500;
+            border-radius: var(--radius);
+        }
+
+        .list-group-item {
+            background-color: var(--card);
+            border: 1px solid var(--border);
+            color: var(--foreground);
+            padding: 0.75rem 1rem;
+        }
+
+        .list-group-item:hover {
+            background-color: var(--accent);
+        }
+
+        .alert {
+            border-radius: var(--radius);
+            border: 1px solid var(--border);
+        }
+
+        .alert-info {
+            background-color: var(--accent);
+            color: var(--accent-foreground);
+            border-color: var(--border);
+        }
+
+        .alert-success {
+            background-color: var(--success);
+            color: var(--success-foreground);
+            border-color: var(--success);
+        }
+
+        .alert-success .btn-close {
+            filter: invert(1);
         }
 
         .sidebar {
@@ -1000,11 +1140,146 @@
             </div>
 
             <div id="settings-view" class="d-none">
-                <h1 class="h3">Settings</h1>
-                <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
-                    <div class="card-body">
-                        <p>Settings will go here.</p>
-                        <!-- Full settings UI will be complex to just add here without more context from original file -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h1 class="h3">Settings</h1>
+                    <button id="saveSettingsBtn" class="btn btn-primary">
+                        <i class="fas fa-save me-2"></i>Save Settings
+                    </button>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="settings-section">
+                            <h3><i class="fas fa-palette me-2"></i>Appearance</h3>
+                            <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
+                                <div class="card-body">
+                                    <div class="mb-3">
+                                        <label class="form-label">Theme Mode</label>
+                                        <div class="btn-group w-100" role="group">
+                                            <button id="lightModeBtn" class="btn btn-outline-secondary">
+                                                <i class="fas fa-sun me-2"></i>Light
+                                            </button>
+                                            <button id="darkModeBtn" class="btn btn-outline-secondary">
+                                                <i class="fas fa-moon me-2"></i>Dark
+                                            </button>
+                                            <button id="systemModeBtn" class="btn btn-outline-secondary">
+                                                <i class="fas fa-desktop me-2"></i>System
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" id="useEmojisCheck">
+                                            <label class="form-check-label" for="useEmojisCheck">
+                                                Use Emojis in App Title
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" id="colorCodedEventsCheck">
+                                            <label class="form-check-label" for="colorCodedEventsCheck">
+                                                Color Code Events (Focus/Distraction)
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="settings-section">
+                            <h3><i class="fas fa-clock me-2"></i>Timeline Settings</h3>
+                            <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
+                                <div class="card-body">
+                                    <div class="mb-3">
+                                        <label for="timelineIncrements" class="form-label">Timeline Increments (minutes)</label>
+                                        <select class="form-select" id="timelineIncrements">
+                                            <option value="5">5 minutes</option>
+                                            <option value="10">10 minutes</option>
+                                            <option value="15">15 minutes</option>
+                                            <option value="30">30 minutes</option>
+                                            <option value="60">1 hour</option>
+                                        </select>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="defaultViewSelect" class="form-label">Default View</label>
+                                        <select class="form-select" id="defaultViewSelect">
+                                            <option value="day">Day View</option>
+                                            <option value="week">Week View</option>
+                                            <option value="month">Month View</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="settings-section">
+                            <h3><i class="fas fa-tags me-2"></i>Categories</h3>
+                            <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
+                                <div class="card-body">
+                                    <div class="mb-3">
+                                        <label class="form-label">Manage Categories</label>
+                                        <div id="categoriesList" class="mb-3">
+                                            <!-- Categories will be populated here -->
+                                        </div>
+                                        <div class="d-flex gap-2">
+                                            <input type="text" id="newCategoryInput" class="form-control" placeholder="New category name">
+                                            <button id="addCategoryBtn" class="btn btn-outline-secondary" aria-label="Add new category">
+                                                <i class="fas fa-plus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="settings-section">
+                            <h3><i class="fas fa-desktop me-2"></i>App Classifications</h3>
+                            <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
+                                <div class="card-body">
+                                    <div class="mb-3">
+                                        <label class="form-label">App to Category Mapping</label>
+                                        <div id="appClassificationsList" class="list-group mb-3">
+                                            <!-- App classifications will be populated here -->
+                                        </div>
+                                        <div class="d-flex gap-2">
+                                            <input type="text" id="newAppInput" class="form-control" placeholder="App name">
+                                            <select id="newCategorySelect" class="form-select" aria-label="Select category for app">
+                                                <!-- Categories will be populated here -->
+                                            </select>
+                                            <button id="addClassificationBtn" class="btn btn-outline-secondary" aria-label="Add new app classification">
+                                                <i class="fas fa-plus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="settings-section">
+                    <h3><i class="fas fa-info-circle me-2"></i>Data Management</h3>
+                    <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
+                        <div class="card-body">
+                            <div class="alert alert-info">
+                                <i class="fas fa-info-circle me-2"></i>
+                                <strong>Data Location:</strong> Your tracking data is stored locally in <code>segments.csv</code>
+                            </div>
+                            <div class="d-flex gap-2">
+                                <button id="exportDataBtn" class="btn btn-outline-secondary">
+                                    <i class="fas fa-download me-2"></i>Export Data
+                                </button>
+                                <button id="importDataBtn" class="btn btn-outline-secondary">
+                                    <i class="fas fa-upload me-2"></i>Import Data
+                                </button>
+                                <button id="clearDataBtn" class="btn btn-outline-danger">
+                                    <i class="fas fa-trash me-2"></i>Clear All Data
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
